--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./public/img/Jordan.png" />
+    <link rel="icon" type="image/svg+xml" href="/img/Jordan.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./output.css" rel="stylesheet">
-    <title>Jordan</title>
+    <title>Jordan.cn</title>
   </head>
   <body>
     <div id="root"></div>
